fix: CSS for conversion table overflow

--- a/packages/ui/src/scss/style.scss
+++ b/packages/ui/src/scss/style.scss
@@ -1854,6 +1854,7 @@ a:focus {
 
   @media screen and (min-width: 1065px) {
     padding-top: 52px;
+    max-height: calc(100vh - 120px);
   }
 }
 
